--- a/index.html
+++ b/index.html
@@ -4,17 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+        }
+
+        .header {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: right;
+        }
+
+        .menu {
+            display: none;
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: auto; /* Adjust width based on content */
+            padding: 15px;
+            background-color: black;
+            color: white;
+            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        .menu.visible {
+            display: block;
+            opacity: 1;
+        }
+
+        .menu-button {
+            display: block;
+            color: white;
+            text-decoration: none;
+            margin: 10px 0;
+            padding: 10px;
+            border: 2px solid white; /* White outline */
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+
+        .menu-button:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .close-button {
+            margin-top: 20px;
+            color: white;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+
         .info-box {
             padding: 10px;
             background-color: #f9f9f9;
             border: 1px solid #ddd;
             text-align: center;
-            margin: 20px;
+            margin: 20px 0;
             font-size: 16px;
             color: #333;
             font-weight: bold;
+        }
+
+        .search-bar-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 20px;
+        }
+
+        .search-bar-container input {
+            padding: 10px;
+            border: 2px solid black;
+            border-radius: 15px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            outline: none;
+            width: 100%;
+            max-width: 300px;
+            margin-bottom: 10px;
+        }
+
+        .search-bar-container button {
+            background-color: black;
+            color: white;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .search-bar-container button:hover {
+            background-color: darkgrey;
+        }
+
+        #error-message {
+            color: red;
+            display: none;
+        }
+
+        @media (max-width: 600px) {
+            .menu {
+                width: 100%; /* Full width on mobile */
+            }
+
+            .info-box {
+                font-size: 14px;
+            }
+
+            .search-bar-container input, .search-bar-container button {
+                width: 95%;
+            }
         }
     </style>
 </head>
@@ -27,11 +139,11 @@
         <a href="about.html" class="menu-button">About</a>
         <a href="services.html" class="menu-button">Services</a>
         <a href="contact.html" class="menu-button">Contact</a>
-        <a href="javascript:void(0);" class="close-button" onclick="toggleMenu()">Close</a>
+        <div class="close-button" onclick="toggleMenu()">Close</div>
     </div>
 
     <div>
-        <img src="./img 0.jpg" alt="">
+        <img src="./img0.jpg" alt="Header Image">
     </div>
 
     <div class="info-box">
@@ -39,19 +151,37 @@
     </div>
 
     <div>
-        <img src="./img 1.jpg" alt="">
+        <img src="./img1.jpg" alt="Content Image">
     </div>
 
     <div class="search-bar-container">
         <input type="text" id="visaNumber" placeholder="TYPE YOUR VISA APPLICATION NUMBER">
-        <button onclick="checkVisaNumber()">Submit</button>
-        <p id="error-message" style="color: red; display: none;"> Not Valid !You have entered a wrong Passport number! Kindly recheck and try again!</p>
+        <button onclick="checkVisaNumber()">SEARCH</button>
+        <p id="error-message">Not Valid! You have entered a wrong Passport number! Kindly recheck and try again!</p>
+    </div>
+
+    <div>
+        <img src="./img2.jpg" alt="Another Image">
+    </div>
+
+    <div>
+        <img src="./img3.jpg" alt="Final Image">
     </div>
 
     <script>
         function toggleMenu() {
             var menu = document.getElementById('menu');
-            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+            if (menu.classList.contains('visible')) {
+                menu.classList.remove('visible');
+                setTimeout(() => {
+                    menu.style.display = 'none';
+                }, 500); // Wait for the transition to finish
+            } else {
+                menu.style.display = 'block';
+                setTimeout(() => {
+                    menu.classList.add('visible');
+                }, 10); // Allow display to take effect
+            }
         }
 
         function checkVisaNumber() {
@@ -63,15 +193,5 @@
             }
         }
     </script>
-
-    <div>
-        <img src="./img 2.jpg" alt="">
-    </div>
-
-    <div>
-        <img src="./img 3.jpg" alt="">
-    </div>
-
 </body>
 </html>
-
