--- a/index.html
+++ b/index.html
@@ -22,25 +22,26 @@
             padding: 10px;
             text-align: right;
         }
+.menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%; /* Set width to 100% */
+    max-height: 100%; /* Prevent overflow */
+    padding: 15px;
+    background-color: black;
+    color: white;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    overflow-y: auto; /* Enable scrolling if content overflows */
+}
 
-        .menu {
-            display: none;
-            position: fixed;
-            top: 0;
-            right: 0;
-            width: auto; /* Adjust width based on content */
-            padding: 15px;
-            background-color: black;
-            color: white;
-            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
-            opacity: 0;
-            transition: opacity 0.5s ease-in-out;
-        }
-
-        .menu.visible {
-            display: block;
-            opacity: 1;
-        }
+.menu.visible {
+    display: block;
+    opacity: 1;
+}
 
         .menu-button {
             display: block;
@@ -378,7 +379,7 @@
                 </div>
             </div>
 
-        <section class="section" style="background: linear-gradient(to bottom, #333, #555); border-radius: 10px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); margin: 20px auto; width: 100%; max-width: 600px; overflow: hidden;">
+      <section class="section" style="background: linear-gradient(to bottom, #333, #555); border-radius: 10px; padding: 20px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); margin: 20px auto; max-width: 600px; overflow: hidden; width: 90%; box-sizing: border-box;">
     <div class="section-title" style="color: #fff; font-size: 1.5em; text-align: center; margin-bottom: 15px; padding: 15px; background: rgba(50, 50, 50, 0.8); border-radius: 5px; font-weight: bold;">
         Frequently Asked Questions (FAQs)
     </div>
@@ -465,7 +466,6 @@
         </div>
     </div>
 </section>
-        
             <div style="border: 2px solid white; border-radius: 8px; margin: 20px 0; padding: 15px; background: rgba(50, 50, 50, 0.8); box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2);">
                 <h3 style="color: white; font-size: 1em; margin-bottom: 10px; text-shadow: 0 0 10px white;">Get Started Today!</h3>
                 <p style="color: #ddd; font-size: 0.85em; line-height: 1.5; text-shadow: 0 0 10px white;">
