--- a/index.html
+++ b/index.html
@@ -36,35 +36,41 @@
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     overflow-y: auto; /* Enable scrolling if content overflows */
+    display: flex; /* Use flexbox */
+    flex-direction: column; /* Stack items vertically */
+    align-items: center; /* Center items horizontally */
+    text-align: center; /* Center text */
 }
 
 .menu.visible {
-    display: block;
+    display: flex; /* Ensure it's displayed as flex when visible */
     opacity: 1;
 }
 
-        .menu-button {
-            display: block;
-            color: white;
-            text-decoration: none;
-            margin: 10px 0;
-            padding: 10px;
-            border: 2px solid white; /* White outline */
-            border-radius: 5px;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
+.menu-button {
+    display: block;
+    color: white;
+    text-decoration: none;
+    margin: 10px 0;
+    padding: 10px;
+    border: 2px solid white; /* White outline */
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s;
+    width: 100%; /* Make buttons full width */
+    max-width: 200px; /* Limit max width for better appearance */
+}
 
-        .menu-button:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
+.menu-button:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
 
-        .close-button {
-            margin-top: 20px;
-            color: white;
-            cursor: pointer;
-            font-weight: bold;
-        }
+.close-button {
+    margin-top: 20px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
 
         img {
             width: 100%;
@@ -195,7 +201,7 @@
 
         <div style="background: rgba(50, 50, 50, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 500px; box-sizing: border-box;">
             <div style="display: flex; align-items: center; color: white; font-size: 1.2em;">
-                <img src="https://img.icons8.com/ios-filled/30/ffffff/airplane-take-off.png" style="margin-right: 10px;" alt="Airplane Icon"/>
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/airplane-take-off.png" style="margin-right: 10px;" alt="Airplane Icon"/>
                 Visit the Visa Status Page
             </div>
             <p style="color: #ddd; font-size: 0.9em; line-height: 1.5;">Navigate to the visa status checking page on our website.</p>
@@ -203,7 +209,7 @@
 
         <div style="background: rgba(50, 50, 50, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 500px; box-sizing: border-box;">
             <div style="display: flex; align-items: center; color: white; font-size: 1.2em;">
-                <img src="https://img.icons8.com/ios-filled/30/ffffff/search.png" style="margin-right: 10px;" alt="Search Icon"/>
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/search.png" style="margin-right: 10px;" alt="Search Icon"/>
                 Enter Your Visa Application Number
             </div>
             <p style="color: #ddd; font-size: 0.9em; line-height: 1.5;">In the designated field, enter your Visa Application Number. This unique identifier is essential for tracking your application status.</p>
@@ -211,7 +217,7 @@
 
         <div style="background: rgba(50, 50, 50, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 500px; box-sizing: border-box;">
             <div style="display: flex; align-items: center; color: white; font-size: 1.2em;">
-                <img src="https://img.icons8.com/ios-filled/30/ffffff/checkmark.png" style="margin-right: 10px;" alt="Check Icon"/>
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/checkmark.png" style="margin-right: 10px;" alt="Check Icon"/>
                 Submit Your Request
             </div>
             <p style="color: #ddd; font-size: 0.9em; line-height: 1.5;">Click the "Check Status" button to submit your request. The system will retrieve your visa application status.</p>
@@ -219,7 +225,7 @@
 
         <div style="background: rgba(50, 50, 50, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 500px; box-sizing: border-box;">
             <div style="display: flex; align-items: center; color: white; font-size: 1.2em;">
-                <img src="https://img.icons8.com/ios-filled/30/ffffff/visible.png" style="margin-right: 10px;" alt="Visibility Icon"/>
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/visible.png" style="margin-right: 10px;" alt="Visibility Icon"/>
                 View Your Status
             </div>
             <p style="color: #ddd; font-size: 0.9em; line-height: 1.5;">Your current visa status will be displayed on the screen. Possible statuses include "In Process," "Approved," or "Rejected."</p>
@@ -227,7 +233,7 @@
 
         <div style="background: rgba(50, 50, 50, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 500px; box-sizing: border-box;">
             <div style="display: flex; align-items: center; color: white; font-size: 1.2em;">
-                <img src="https://img.icons8.com/ios-filled/30/ffffff/help.png" style="margin-right: 10px;" alt="Help Icon"/>
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/help.png" style="margin-right: 10px;" alt="Help Icon"/>
                 What to Do If You Cannot Find Your Visa Status
             </div>
             <p style="color: #ddd; font-size: 0.9em; line-height: 1.5;">
@@ -239,7 +245,7 @@
 
         <div style="background: rgba(50, 50, 50, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 500px; box-sizing: border-box;">
             <div style="display: flex; align-items: center; color: white; font-size: 1.2em;">
-                <img src="https://img.icons8.com/ios-filled/30/ffffff/document.png" style="margin-right: 10px;" alt="Document Icon"/>
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/document.png" style="margin-right: 10px;" alt="Document Icon"/>
                 If Your Visa Is Approved
             </div>
             <p style="color: #ddd; font-size: 0.9em; line-height: 1.5;">
@@ -250,7 +256,7 @@
 
         <div style="background: rgba(50, 50, 50, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 500px; box-sizing: border-box;">
             <div style="display: flex; align-items: center; color: white; font-size: 1.2em;">
-                <img src="https://img.icons8.com/ios-filled/30/ffffff/info.png" style="margin-right: 10px;" alt="Info Icon"/>
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/info.png" style="margin-right: 10px;" alt="Info Icon"/>
                 Additional Information
             </div>
             <p style="color: #ddd; font-size: 0.9em; line-height: 1.5;">
@@ -262,7 +268,6 @@
 
     </div>
 </section>
-           
         <div style="border: 2px solid white; border-radius: 8px; margin: 20px 0; padding: 15px; background: rgba(50, 50, 50, 0.8); box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2);">
             <h3 style="color: white; font-size: 0.9em; margin-bottom: 10px; text-shadow: 0 0 10px white;">Our Commitment to You</h3>
             <p style="color: #ddd; font-size: 0.8em; line-height: 1.5; text-shadow: 0 0 10px white;">
