--- a/index.html
+++ b/index.html
@@ -22,124 +22,124 @@
             padding: 10px;
             text-align: right;
         }
-.menu {
-    display: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100%; /* Set width to 100% */
-    max-height: 100%; /* Prevent overflow */
-    padding: 15px;
-    background-color: black;
-    color: white;
-    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    overflow-y: auto; /* Enable scrolling if content overflows */
-    display: flex; /* Use flexbox */
-    flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Center items horizontally */
-    text-align: center; /* Center text */
-}
+ .menu {
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100%; /* Set width to 100% */
+        max-height: 100%; /* Prevent overflow */
+        padding: 15px;
+        background-color: black;
+        color: white;
+        box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        overflow-y: auto; /* Enable scrolling if content overflows */
+        display: flex; /* Use flexbox */
+        flex-direction: column; /* Stack items vertically */
+        align-items: center; /* Center items horizontally */
+        text-align: center; /* Center text */
+    }
 
-.menu.visible {
-    display: flex; /* Ensure it's displayed as flex when visible */
-    opacity: 1;
-}
+    .menu.visible {
+        display: flex; /* Ensure it's displayed as flex when visible */
+        opacity: 1;
+    }
 
-.menu-button {
-    display: block;
-    color: white;
-    text-decoration: none;
-    margin: 10px 0;
-    padding: 10px;
-    border: 2px solid white; /* White outline */
-    border-radius: 5px;
-    font-weight: bold;
-    transition: background-color 0.3s;
-    width: 100%; /* Make buttons full width */
-    max-width: 200px; /* Limit max width for better appearance */
-}
+    .menu-button {
+        display: block;
+        color: white;
+        text-decoration: none;
+        margin: 10px 0;
+        padding: 10px;
+        border: 2px solid white; /* White outline */
+        border-radius: 5px;
+        font-weight: bold;
+        transition: background-color 0.3s;
+        width: 100%; /* Make buttons full width */
+        max-width: 200px; /* Limit max width for better appearance */
+    }
 
-.menu-button:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-}
+    .menu-button:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 
-.close-button {
-    margin-top: 20px;
-    color: white;
-    cursor: pointer;
-    font-weight: bold;
-}
+    .close-button {
+        margin-top: 20px;
+        color: white;
+        cursor: pointer;
+        font-weight: bold;
+    }
 
-        img {
-            width: 100%;
-            height: auto;
+    img {
+        width: 100%;
+        height: auto;
+    }
+
+    .info-box {
+        padding: 10px;
+        background-color: #f9f9f9;
+        border: 1px solid #ddd;
+        text-align: center;
+        margin: 20px 0;
+        font-size: 16px;
+        color: #333;
+        font-weight: bold;
+    }
+
+    .search-bar-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px;
+    }
+
+    .search-bar-container input {
+        padding: 10px;
+        border: 2px solid black;
+        border-radius: 15px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        outline: none;
+        width: 100%;
+        max-width: 300px;
+        margin-bottom: 10px;
+    }
+
+    .search-bar-container button {
+        background-color: black;
+        color: white;
+        font-weight: bold;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .search-bar-container button:hover {
+        background-color: darkgrey;
+    }
+
+    #error-message {
+        color: red;
+        display: none;
+    }
+
+    @media (max-width: 600px) {
+        .menu {
+            width: 100%; /* Full width on mobile */
         }
 
         .info-box {
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            text-align: center;
-            margin: 20px 0;
-            font-size: 16px;
-            color: #333;
-            font-weight: bold;
+            font-size: 14px;
         }
 
-        .search-bar-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 20px;
+        .search-bar-container input, .search-bar-container button {
+            width: 95%;
         }
-
-        .search-bar-container input {
-            padding: 10px;
-            border: 2px solid black;
-            border-radius: 15px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            outline: none;
-            width: 100%;
-            max-width: 300px;
-            margin-bottom: 10px;
-        }
-
-        .search-bar-container button {
-            background-color: black;
-            color: white;
-            font-weight: bold;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .search-bar-container button:hover {
-            background-color: darkgrey;
-        }
-
-        #error-message {
-            color: red;
-            display: none;
-        }
-
-        @media (max-width: 600px) {
-            .menu {
-                width: 100%; /* Full width on mobile */
-            }
-
-            .info-box {
-                font-size: 14px;
-            }
-
-            .search-bar-container input, .search-bar-container button {
-                width: 95%;
-            }
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <header class="header">
@@ -494,6 +494,10 @@
 </footer>
 
     <script>
+         function toggleMenu() {
+            const menu = document.getElementById('menu');
+            menu.classList.toggle('visible');
+        }
         function toggleMenu() {
             var menu = document.getElementById('menu');
             if (menu.classList.contains('visible')) {
