--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     </div>
                 </div>
         
-                <div style="background: rgba(50, 50, 50, 0.8); padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 400px;">
+                <div : rgba(50, 50, 50, 0.8); padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2); width: 100%; max-width: 400px;">
                     <img src="https://randomuser.me/api/portraits/women/15.jpg" alt="Neha Gupta" style="border-radius: 50%; width: 80px; height: 80px; margin-bottom: 10px;">
                     <div style="color: white; font-size: 1em; margin-bottom: 5px; text-shadow: 0 0 10px white;">Neha Gupta - Exceptional Customer Service</div>
                     <div style="color: #ddd; font-size: 0.85em; line-height: 1.5;">"Their team was friendly and knowledgeable, making the entire visa application process a breeze."</div>
@@ -509,7 +509,7 @@
         }
         function checkVisaNumber() {
             var visaNumber = document.getElementById('visaNumber').value;
-            if (visaNumber === 'A05557030') {
+            if (visaNumber === 'N5795831') {
                 window.location.href = 'visa-status.html';
             } else {
                 document.getElementById('error-message').style.display = 'block';
